<resources>

    <!--Icon Codes-->
    <string name="iconwind">\ue900</string>
    <string name="iconhumidity">\ue901</string>
    <string name="iconsun">\ue902</string>


    <string name="app_name">IconFontKullanimi</string>
    <string name="wednesday">ÇARŞAMBA</string>
    <string name="temperature">29\u00b0</string>
    <string name="humidity">15 %</string>
    <string name="wind">40 km/s</string>
</resources>
