<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.figengungor.iconfontkullanimi.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:weightSum="10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/wednesday"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp" />

        <com.figengungor.iconfontkullanimi.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:text="@string/iconsun"
            android:textSize="180sp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <View android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/textColor"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:weightSum="2">

           <TextView
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:text="@string/temperature"
               android:textSize="100sp"
               android:layout_gravity="center"
               android:gravity="center"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2"
                android:paddingLeft="15dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:gravity="bottom">

                    <com.figengungor.iconfontkullanimi.IconTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/iconhumidity"
                        android:textSize="35sp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textSize="30sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <com.figengungor.iconfontkullanimi.IconTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/iconwind"
                        android:textSize="35sp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textSize="30sp"/>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
